Added Grief Defender as a optional dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,11 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	maven {
+		name = 'griefdefender'
+		url = 'https://repo.glaremasters.me/repository/bloodshot'
+	}
+
 }
 
 fabricApi {
@@ -35,7 +40,11 @@ dependencies {
 
     // H2 Database
     implementation 'com.h2database:h2:2.2.224' // latest as of late 2025
-	
+
+	// Grief Defender
+	compileOnly group: 'com.griefdefender', name: 'api', version: '2.1.1-SNAPSHOT'
+
+
 }
 
 processResources {
