--- a/build.gradle
+++ b/build.gradle
@@ -52,14 +52,10 @@ dependencies {
     // H2 Database
     implementation 'com.h2database:h2:2.2.224' // latest as of late 2025
 
-	// Grief Defender
-	compileOnly group: 'com.griefdefender', name: 'api', version: '2.1.1-SNAPSHOT'
+    compileOnly("com.griefdefender:api:2.1.1-SNAPSHOT")
+    //modCompileOnly(files("libs/griefdefender-fabric-1.21.1-3.1.2.jar"))
+    modLocalRuntime(files("libs/griefdefender-fabric-1.21.1-3.1.2.jar"))
 
-	// Adventure Text API (for Component)
-	//compileOnly("net.kyori:adventure-api:4.11.0")
-
-	// Flowpowered Math (for Vector3i)
-	//compileOnly("com.flowpowered:flow-math:1.0.3")
 
 }
 
