--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,27 +4,23 @@
 # against bad commits.
 
 name: build
-on: [pull_request, push]
+on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
-      - name: checkout repository
-        uses: actions/checkout@v4
-      - name: validate gradle wrapper
-        uses: gradle/actions/wrapper-validation@v4
-      - name: setup jdk
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-java@v4
         with:
-          java-version: '21'
-          distribution: 'microsoft'
-      - name: make gradle wrapper executable
-        run: chmod +x ./gradlew
-      - name: build
-        run: ./gradlew build
-      - name: capture build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: Artifacts
-          path: build/libs/
+          distribution: temurin
+          java-version: "21"
+
+      - name: Clean Loom caches
+        run: |
+          rm -rf ~/.gradle/caches/fabric-loom
+          rm -rf .gradle/loom-cache
+
+      - name: Build
+        run: ./gradlew build --stacktrace --info --refresh-dependencies
