--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,26 +1,35 @@
-# Automatically build the project and run any configured tests for every push
-# and submitted pull request. This can help catch issues that only occur on
-# certain platforms or Java versions, and provides a first line of defence
-# against bad commits.
-
 name: build
-on: [push, pull_request]
+
+on:
+  push:
+  pull_request:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v4
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Java 21
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: "21"
 
+      # Optional but recommended: validates gradle-wrapper.jar against known-good hashes
+      - name: Validate Gradle Wrapper
+        uses: gradle/actions/wrapper-validation@v4
+
+      - name: Make Gradle wrapper executable
+        run: chmod +x ./gradlew
+
+      # Helps prevent "Failed to compute checksum" from a corrupted Loom cache on CI
       - name: Clean Loom caches
         run: |
           rm -rf ~/.gradle/caches/fabric-loom
           rm -rf .gradle/loom-cache
 
-      - name: Build
+      - name: Build (with diagnostics + forced re-downloads)
         run: ./gradlew build --stacktrace --info --refresh-dependencies
