--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,35 +1,30 @@
-name: build
+# Automatically build the project and run any configured tests for every push
+# and submitted pull request. This can help catch issues that only occur on
+# certain platforms or Java versions, and provides a first line of defence
+# against bad commits.
 
-on:
-  push:
-  pull_request:
+name: build
+on: [pull_request, push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-24.04
     steps:
-      - name: Checkout
+      - name: checkout repository
         uses: actions/checkout@v4
-
-      - name: Set up Java 21
+      - name: validate gradle wrapper
+        uses: gradle/actions/wrapper-validation@v4
+      - name: setup jdk
         uses: actions/setup-java@v4
         with:
-          distribution: temurin
-          java-version: "21"
-
-      # Optional but recommended: validates gradle-wrapper.jar against known-good hashes
-      - name: Validate Gradle Wrapper
-        uses: gradle/actions/wrapper-validation@v4
-
-      - name: Make Gradle wrapper executable
+          java-version: '21'
+          distribution: 'microsoft'
+      - name: make gradle wrapper executable
         run: chmod +x ./gradlew
-
-      # Helps prevent "Failed to compute checksum" from a corrupted Loom cache on CI
-      - name: Clean Loom caches
-        run: |
-          rm -rf ~/.gradle/caches/fabric-loom
-          rm -rf .gradle/loom-cache
-
-      - name: Build (with diagnostics + forced re-downloads)
-        run: ./gradlew build --stacktrace --info --refresh-dependencies
+      - name: build
+        run: ./gradlew build
+      - name: capture build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: Artifacts
+          path: build/libs/
