--- a/build.gradle
+++ b/build.gradle
@@ -41,20 +41,16 @@ fabricApi {
 }
 
 dependencies {
-	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	//mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     mappings loom.officialMojangMappings()
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
-	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     // H2 Database
     implementation 'com.h2database:h2:2.2.224' // latest as of late 2025
 
+    // Grief Defender + API
     compileOnly("com.griefdefender:api:2.1.1-SNAPSHOT")
-    //modCompileOnly(files("libs/griefdefender-fabric-1.21.1-3.1.2.jar"))
     modLocalRuntime(files("libs/griefdefender-fabric-1.21.1-3.1.2.jar"))
 
 
