--- a/build.gradle
+++ b/build.gradle
@@ -21,14 +21,6 @@ repositories {
 		url = 'https://repo.glaremasters.me/repository/bloodshot'
 	}
 
-	maven {
-		name = "Kyori"
-		url = "https://repo.spongepowered.org/maven"
-	}
-	maven {
-		name = "sonatype"
-		url = "https://oss.sonatype.org/content/repositories/snapshots/"
-	}
 
 	mavenCentral()
 
@@ -51,7 +43,7 @@ dependencies {
 
     // Grief Defender + API
     compileOnly("com.griefdefender:api:2.1.1-SNAPSHOT")
-    modLocalRuntime(files("libs/griefdefender-fabric-1.21.1-3.1.2.jar"))
+   // modLocalRuntime(files("libs/griefdefender-fabric-1.21.1-3.1.2.jar"))
 
 
 }
