updated GD API repo

--- a/build.gradle
+++ b/build.gradle
@@ -16,11 +16,15 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
-	maven {
-		name = 'griefdefender'
-		url = 'https://repo.glaremasters.me/repository/bloodshot'
-	}
+	//maven {
+		//name = 'griefdefender'
+	//	url = 'https://repo.glaremasters.me/repository/bloodshot'
+//	}
 
+	maven {
+		name = "sonatype"
+		url = "https://central.sonatype.com/repository/maven-snapshots/"
+	}
 
 	mavenCentral()
 
@@ -43,7 +47,6 @@ dependencies {
 
     // Grief Defender + API
     compileOnly("com.griefdefender:api:2.1.1-SNAPSHOT")
-   // modLocalRuntime(files("libs/griefdefender-fabric-1.21.1-3.1.2.jar"))
 
 
 }
